feat Upd pom y jenkinsfile para eliminar perfiles de minrequerida y min recomendada