@@ -135,116 +135,6 @@
 	</dependencies>
 
 	<profiles>
-
-		<profile>
-			<id>instalar</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>3.0.0-M5</version>
-						<configuration>
-							<systemPropertyVariables>
-								<!--suppress UnresolvedMavenProperty -->
-								<appPath>${v_appLocalActual}</appPath>
-								<noReset>false</noReset>
-								<fullReset>true</fullReset>
-							</systemPropertyVariables>
-							<includes>
-								<include>**/**Rimac*.java</include>
-							</includes>
-							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>noInstalar</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>3.0.0-M5</version>
-						<configuration>
-							<systemPropertyVariables>
-								<!--suppress UnresolvedMavenProperty -->
-								<appPath>${v_appLocalActual}</appPath>
-								<noReset>true</noReset>
-								<fullReset>false</fullReset>
-							</systemPropertyVariables>
-							<includes>
-								<include>**/**Rimac*.java</include>
-							</includes>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>verMinRequerida</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>3.0.0-M5</version>
-						<configuration>
-							<systemPropertyVariables>
-								<!--suppress UnresolvedMavenProperty -->
-								<appPath>${v_appLocalMinRequerida}</appPath>
-								<noReset>false</noReset>
-								<fullReset>true</fullReset>
-							</systemPropertyVariables>
-							<includes>
-								<include>**/**Rimac*.*</include>
-							</includes>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>verMinRecomendada</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>3.0.0-M5</version>
-						<configuration>
-							<systemPropertyVariables>
-								<!--suppress UnresolvedMavenProperty -->
-								<appPath>${v_appLocalMinRecomendada}</appPath>
-								<noReset>false</noReset>
-								<fullReset>true</fullReset>
-							</systemPropertyVariables>
-							<includes>
-								<include>**/**Rimac*.*</include>
-							</includes>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
 		<profile>
 			<id>installAppCloudActual</id>
 			<activation>
@@ -266,50 +156,7 @@
 				</plugins>
 			</build>
 		</profile>
-		
-		<profile>
-			<id>installAppCloudMinRequerida</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>3.0.0-M5</version>
-						<configuration>
-							<systemPropertyVariables>
-								<!--suppress UnresolvedMavenProperty -->
-								<appPath>${v_appCloudMinRequerida}</appPath>
-							</systemPropertyVariables>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
 
-		<profile>
-			<id>installAppCloudMinRecomendada</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>3.0.0-M5</version>
-						<configuration>
-							<systemPropertyVariables>
-								<!--suppress UnresolvedMavenProperty -->
-								<appPath>${v_appCloudMinRecomendada}</appPath>
-							</systemPropertyVariables>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
 	</profiles>
 
 	<build>
